moved markdown check to a separate file, fixed text wrapping.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,3 +37,6 @@ a:visited {
 .post-image {
   max-width: 50%;
 }
+.post-text, .thread-text {
+  white-space: pre-wrap;
+}
